<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:hint="@string/ywsq_add_time"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:background="@drawable/calendar_top"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/leftBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/arrow_left" />

                <TextView
                    android:id="@+id/monthText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip"
                    android:text="2012-07"
                    android:textColor="@color/gray_dark"
                    android:textSize="15dip" />

                <Button
                    android:id="@+id/rightBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/arrow_right" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout01_cal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>

        <include
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            layout="@layout/app_divider" />

        <LinearLayout
            android:id="@+id/layout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:hint="@string/ywsq_add_location"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/ywsq_add_location_hint"
                android:paddingBottom="10dip"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="18sp" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:hint="@string/ywsq_add_budget"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/ywsq_add_budget_hint"
                android:paddingBottom="10dip"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="18sp" >
            </EditText>
        </LinearLayout>

        <include
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            layout="@layout/app_divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:hint="@string/ywsq_add_reason"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/blue"
                            android:hint="@string/ywsq_add_reason_1"
                            android:textColor="@color/gray"
                            android:textSize="30sp" />

                        <com.ab.view.sliding.AbSlidingButton
                            android:id="@+id/mSliderBtn1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/blue"
                            android:hint="@string/ywsq_add_reason_2"
                            android:textColor="@color/gray"
                            android:textSize="30sp" />

                        <com.ab.view.sliding.AbSlidingButton
                            android:id="@+id/mSliderBtn2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/blue"
                            android:hint="@string/ywsq_add_reason_3"
                            android:textColor="@color/gray"
                            android:textSize="30sp" />

                        <com.ab.view.sliding.AbSlidingButton
                            android:id="@+id/mSliderBtn3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/blue"
                            android:hint="@string/ywsq_add_reason_4"
                            android:textColor="@color/gray"
                            android:textSize="30sp" />

                        <com.ab.view.sliding.AbSlidingButton
                            android:id="@+id/mSliderBtn4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <include
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            layout="@layout/app_divider" />

        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="30dip"
            android:orientation="vertical" >

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector_green"
                android:text="@string/ywsq_add_submit"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:background="@drawable/button_selector_red"
                android:text="@string/ywsq_add_cancel"
                android:textColor="@color/gray"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>